--- a/_posts/2024-11-11-interesting-links-2024-11-11.md
+++ b/_posts/2024-11-11-interesting-links-2024-11-11.md
@@ -8,7 +8,11 @@ Tags  - [AI](#AI) - [development](#development) - [eink](#eink) - [general](#gen
 
 
 ## AI
-- <img src='http://www.techmeme.com/241114/i37.jpg' alt='drawing' style='max-height: 100px;'/>  [BSA, representing OpenAI, Microsoft, and others, urges Trump to review rules that are "unnecessarily impeding AI adoption" but to keep some of Biden's moves (Morgan Chalfant/Semafor) -   Morgan Chalfant / Semafor: BSA, representing...](http://www.techmeme.com/241114/p37#a241114p37) (Techmeme - Techmeme)
+<div class="link-content"><img src='http://www.techmeme.com/241114/i37.jpg' class="link-image"/>
+<div class="link-text" markdown="1">  
+[BSA, representing OpenAI, Microsoft, and others, urges Trump to review rules that are "unnecessarily impeding AI adoption" but to keep some of Biden's moves (Morgan Chalfant/Semafor) -   Morgan Chalfant / Semafor: BSA, representing...](http://www.techmeme.com/241114/p37#a241114p37) (Techmeme - Techmeme)
+</div>
+</div>
 - <img src='http://www.techmeme.com/241114/i30.jpg' alt='drawing' style='max-height: 100px;'/>  [The EU publishes its first draft of a Code of Practice under the AI Act for general-purpose AI models, including provisions for copyright and systemic risk (Natasha Lomas/TechCrunch) -   Natasha Lomas / TechCrunch: The EU publishes...](http://www.techmeme.com/241114/p30#a241114p30) (Techmeme - Techmeme)
 - <img src='https://cdn.mos.cms.futurecdn.net/gTrcJjwtuonmBP2yVcaXpd.png' alt='drawing' style='max-height: 100px;'/>  [Is it weird that I love Apple's hilariously cryptic AI notifications? - It's brilliant for all the wrong reasons.](https://www.creativebloq.com/tech/is-it-weird-that-i-love-apples-hilariously-cryptic-ai-notifications) (Creative Bloq - Creative Bloq)
 - <img src='http://www.techmeme.com/241113/i43.jpg' alt='drawing' style='max-height: 100px;'/>  [Sources: OpenAI plans to launch a new AI agent codenamed Operator, which can use a computer to take actions on a person's behalf, in January (Bloomberg) -   Bloomberg: Sources: OpenAI plans to launch a...](http://www.techmeme.com/241113/p43#a241113p43) (Techmeme - Techmeme)
